[gd_scene load_steps=3 format=2]

[ext_resource path="res://debug_controls.gd" type="Script" id=1]
[ext_resource path="res://Console.gd" type="Script" id=2]

[node name="debug_controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="debug_catch" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 122.0
margin_bottom = 20.0
text = "debug_catch"

[node name="debug_encounter" type="Button" parent="VBoxContainer"]
margin_right = 122.0
margin_bottom = 20.0
text = "debug_encounter"

[node name="debug_damage" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 44.0
text = "debug_damage"

[node name="Console" type="LineEdit" parent="."]
margin_left = 177.0
margin_top = 1.0
margin_right = 678.0
margin_bottom = 20.0
caret_blink = true
script = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/debug_catch" to="." method="_on_debug_catch_pressed"]
[connection signal="pressed" from="VBoxContainer/debug_encounter" to="." method="_on_debug_encounter_pressed"]
[connection signal="pressed" from="VBoxContainer/debug_damage" to="." method="_on_debug_damage_pressed"]
[connection signal="text_entered" from="Console" to="Console" method="_on_Console_text_entered"]
